[package]
name = "resync"
version = "0.5.0"
authors = ["Seth Wright <seth@crosse.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
bytesize = "1.1.0"
getopts = "0.2.21"
log = "0.4.17"
notify = "4.0.17"
ssh2 = "0.9.3"
stderrlog = "0.5.1"
termion = "1.5.6"
