[package]
name = "resync"
version = "0.5.0"
authors = ["Seth Wright <seth@crosse.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.20.0"
bytesize = "1.2.0"
getopts = "0.2.21"
log = "0.4.17"
notify = "4.0.17"
sha2 = "0.10.6"
shellexpand = "2.1.2"
ssh2 = "0.9.4"
stderrlog = "0.5.4"
termion = "2.0.1"
